# python-pubsub-notifier

./: README.md  pyproject.toml
src/pubsub_notifier/: __init__.py  client.py  exceptions.py
src/tests/: test_client.py
